--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -39,5 +39,8 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- with .Values.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
 
 
