--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: {{ .Values.service.port }}
+              containerPort: 8444
               protocol: TCP
           env:
             {{- range .Values.env }}
