--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: thoughtspot-bridge
+            - name: bridge
               containerPort: 8444
               protocol: TCP
             - name: https
